// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withOpenEvents should attach different event handlers when touch is supported 1`] = `
<input
  aria-invalid={false}
  className="bpk-input bpk-input--with-open-events"
  id="my-input"
  name="my-input"
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onTouchEnd={[Function]}
  readOnly="readOnly"
  type="text"
  value="value"
/>
`;

exports[`withOpenEvents should render correctly 1`] = `
<input
  aria-invalid={false}
  className="bpk-input bpk-input--with-open-events"
  id="my-input"
  name="my-input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="text"
  value="value"
/>
`;

exports[`withOpenEvents should render correctly with "className" prop 1`] = `
<input
  aria-invalid={false}
  className="bpk-input bpk-input--with-open-events my-custom-class"
  id="my-input"
  name="my-input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="text"
  value="value"
/>
`;
